--- a/frontend/src/components/Nav.css
+++ b/frontend/src/components/Nav.css
@@ -1,22 +1,20 @@
 .header {
     width: 100%;
     height: 90px;
-    border-bottom: 1px solid #eee;
-    /* background: #fff; */
-    background: #1a1a1a;
+    background: white;
     position: sticky;
     top: 0;
-    left: 0;
     z-index: 10;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.header .container {
+.container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100%;
     padding: 1rem;
+    background-color: white;
 }
 
 .colors {
@@ -25,11 +23,26 @@
 
 .nav-menu {
     display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
-.logo
-{
-  color: #FFE600;
-   font-Size: 28px;
+
+.nav-menu.active {
+    display: flex;
+}
+
+.logo {
+    width: 100px;
+    height: 100px; 
+    border-radius: 50%;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+    margin: 10px;
+}
+
+.logo:hover {
+    transform: scale(1.1); /* Slightly enlarge the logo on hover */
 }
 
 .nav-menu li {
@@ -37,54 +50,52 @@
 }
 
 .nav-menu a {
-    font-size: 1rem;
-    font-weight: 600;
-    color: rgb(255, 255, 255);
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
     transition: color 0.3s ease;
 }
 
 .nav-menu a:hover {
-    color: #FFD700;
+    color: blue;
 }
 
 .hamburger {
     display: none;
-    cursor: pointer;
-    color: #FFE600;
-    font-size: 28px;
 }
 
-
-@media screen and (max-width:1240px) {
+@media screen and (max-width: 768px) {
     .hamburger {
         display: flex;
     }
-
     .nav-menu {
-        position: absolute;
+        display: none;
         flex-direction: column;
-        justify-content: start;
+        position: absolute;
         top: 90px;
-        right: -100%;
-        width: 50%;
-        height: 100vh;
-        transition: 0.4s;
-        z-index: 2;
-        background: rgb(0, 0, 0);
-        border-left: 1px solid #eee;
-    }
-
-    .nav-menu.active {
         right: 0;
-    }
-
-    .nav-menu li {
-        padding: 1rem;
+        background-color: white;
         width: 100%;
-        border-bottom: 1px solid #eee;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     }
-
-    .nav-menu a {
-        font-size: 1.2rem;
+    .nav-menu.active {
+        display: flex;
     }
 }
+.home{
+    color: black;
+
+}
+
+.cart-logo {
+    width: 30px;
+    height: auto;
+    margin-left: 10px;
+    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
+    transition: transform 0.3s ease;
+}
+
+.cart-logo:hover {
+    transform: scale(1.1);
+}
+
